added diagnostique page

--- a/8INF957-MS_TP2/bundleconfig.json
+++ b/8INF957-MS_TP2/bundleconfig.json
@@ -3,7 +3,8 @@
         "outputFileName": "wwwroot/css/site.css",
         "inputFiles": [
             "wwwroot/lib/twitter-bootstrap/css/bootstrap.css",
-            "wwwroot/lib/font-awesome/css/all.css"
+            "wwwroot/lib/font-awesome/css/all.css",
+            "wwwroot/css/stylesheet.css"
         ],
         "minifiy": { "enabled": true }
     },
