REST patient/{id}/diagnostics and diagnose

--- a/RestApi/RestApi.csproj
+++ b/RestApi/RestApi.csproj
@@ -17,12 +17,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\8INF957-MS_TP2\8INF957-MS_TP2.csproj" />
+    <Reference Include="CsvHelper">
+      <HintPath>..\dll\CsvHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="KnnLibrary">
+      <HintPath>..\dll\KnnLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
