Controleur Entity Framework pour doctor et patient

--- a/RestApi/appsettings.json
+++ b/RestApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=localhost;port=3306;database=tp2;user=tp2_user;password=tp2_password;"
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +11,5 @@
     }
   },
   "AllowedHosts": "*"
+ 
 }
