--- a/8INF957-MS_TP2/8INF957-MS_TP2.csproj
+++ b/8INF957-MS_TP2/8INF957-MS_TP2.csproj
@@ -33,4 +33,8 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestApi\RestApi.csproj" />
+  </ItemGroup>
+
 </Project>
