--- a/8INF957-MS_TP2/bundleconfig.json
+++ b/8INF957-MS_TP2/bundleconfig.json
@@ -11,11 +11,11 @@
     {
         "outputFileName": "wwwroot/js/site.js",
         "inputFiles": [
-            //"wwwroot/lib/jquery/dist/jquery.min.js",
-            //"wwwroot/lib/jquery-validation/dist/jquery.validate.min.js",
-            //"wwwroot/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js",
-            //"wwwroot/lib/twitter-bootstrap/js/bootstrap.js",
-            //"wwwroot/lib/font-awesome/js/all.js"
+            "wwwroot/lib/jquery/dist/jquery.min.js",
+            "wwwroot/lib/jquery-validation/dist/jquery.validate.min.js",
+            "wwwroot/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js",
+            "wwwroot/lib/twitter-bootstrap/js/bootstrap.js",
+            "wwwroot/lib/font-awesome/js/all.js"
         ],
         "minifiy": { "enabled": true }
     }
